crates/check_cli/tests/snapshots/main_cases_suppressions/err_when_only_reason.snap
---
source: crates/check_cli/tests/snap_test.rs
assertion_line: 423
expression: content
---
## `fix.js`

```js
(1 >= -0)
```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unrecognized option --reason.
  
  i Type the following command for more information
  
  $ check `--reason` is only valid when `--suppress` is used. --help
  


```
