crates/check_cli/tests/snapshots/main_cases_suppressions/misplaced_top_level_suppression.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `file.js`

```js

let foo = 2;
/**
* check-ignore-all lint/style/useConst: reason
* check-ignore-all lint/suspicious/noDebugger: reason
*/
debugger
let bar = 33;
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js:3:1 suppressions/incorrect ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Top level suppressions can only be used at the beginning of the file.
  
    2 │ let foo = 2;
  > 3 │ /**
      │ ^^^
  > 4 │ * check-ignore-all lint/style/useConst: reason
  > 5 │ * check-ignore-all lint/suspicious/noDebugger: reason
  > 6 │ */
      │ ^^
    7 │ debugger
    8 │ let bar = 33;
  
  i Rename this to check-ignore or move it to the top of the file
  
    2 │ let foo = 2;
    3 │ /**
  > 4 │ * check-ignore-all lint/style/useConst: reason
      │   ^^^^^^^^^^^^^^^^
    5 │ * check-ignore-all lint/suspicious/noDebugger: reason
    6 │ */
  

```

```block
file.js:3:1 suppressions/incorrect ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Top level suppressions can only be used at the beginning of the file.
  
    2 │ let foo = 2;
  > 3 │ /**
      │ ^^^
  > 4 │ * check-ignore-all lint/style/useConst: reason
  > 5 │ * check-ignore-all lint/suspicious/noDebugger: reason
  > 6 │ */
      │ ^^
    7 │ debugger
    8 │ let bar = 33;
  
  i Rename this to check-ignore or move it to the top of the file
  
    2 │ let foo = 2;
    3 │ /**
  > 4 │ * check-ignore-all lint/style/useConst: reason
      │   ^^^^^^^^^^^^^^^^
    5 │ * check-ignore-all lint/suspicious/noDebugger: reason
    6 │ */
  

```

```block
file.js:2:1 lint/style/useConst  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This let declares a variable that is only assigned once.
  
  > 2 │ let foo = 2;
      │ ^^^
    3 │ /**
    4 │ * check-ignore-all lint/style/useConst: reason
  
  i 'foo' is never reassigned.
  
  > 2 │ let foo = 2;
      │     ^^^
    3 │ /**
    4 │ * check-ignore-all lint/style/useConst: reason
  
  i Safe fix: Use const instead.
  
    1 1 │   
    2   │ - let·foo·=·2;
      2 │ + const·foo·=·2;
    3 3 │   /**
    4 4 │   * check-ignore-all lint/style/useConst: reason
  

```

```block
file.js:2:5 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable foo is unused.
  
  > 2 │ let foo = 2;
      │     ^^^
    3 │ /**
    4 │ * check-ignore-all lint/style/useConst: reason
  
  i Unused variables are often the result of an incomplete refactoring, typos, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend foo with an underscore.
  
    1 1 │   
    2   │ - let·foo·=·2;
      2 │ + let·_foo·=·2;
    3 3 │   /**
    4 4 │   * check-ignore-all lint/style/useConst: reason
  

```

```block
file.js:8:1 lint/style/useConst  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This let declares a variable that is only assigned once.
  
    6 │ */
    7 │ debugger
  > 8 │ let bar = 33;
      │ ^^^
  
  i 'bar' is never reassigned.
  
    6 │ */
    7 │ debugger
  > 8 │ let bar = 33;
      │     ^^^
  
  i Safe fix: Use const instead.
  
    6 6 │   */
    7 7 │   debugger
    8   │ - let·bar·=·33;
      8 │ + const·bar·=·33;
  

```

```block
file.js:8:5 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable bar is unused.
  
    6 │ */
    7 │ debugger
  > 8 │ let bar = 33;
      │     ^^^
  
  i Unused variables are often the result of an incomplete refactoring, typos, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend bar with an underscore.
  
    6 6 │   */
    7 7 │   debugger
    8   │ - let·bar·=·33;
      8 │ + let·_bar·=·33;
  

```

```block
file.js:7:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
    5 │ * check-ignore-all lint/suspicious/noDebugger: reason
    6 │ */
  > 7 │ debugger
      │ ^^^^^^^^
    8 │ let bar = 33;
  
  i Unsafe fix: Remove debugger statement
  
    1 1 │   
    2 2 │   let foo = 2;
    3   │ - /**
    4   │ - *·check-ignore-all·lint/style/useConst:·reason
    5   │ - *·check-ignore-all·lint/suspicious/noDebugger:·reason
    6   │ - */
    7   │ - debugger
    8 3 │   let bar = 33;
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
Found 6 warnings.
```
