crates/check_cli/tests/snapshots/main_cases_suppressions/suppress_multiple_ok.snap
---
source: crates/check_cli/tests/snap_test.rs
assertion_line: 423
expression: content
---
## `fix.js`

```js
// check-ignore lint/suspicious/noCompareNegZero: ignored using `--suppress`
(1 >= -0)
// check-ignore lint/suspicious/noCompareNegZero: ignored using `--suppress`
(1 >= -0)
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
