crates/check_cli/tests/snapshots/main_cases_suppressions/suppress_skip_ok.snap
---
source: crates/check_cli/tests/snap_test.rs
assertion_line: 423
expression: content
---
## `fix.js`

```js
(1 >= -0)
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
